--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-util-is": "^1.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "kill-port-process": "^3.1.0",
