--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "core-util-is": "^1.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "kill-port-process": "^3.1.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "tiny-csrf": "^1.1.3"
   },
   "lint-staged": {
     "*.js": [
@@ -27,6 +29,7 @@
     ]
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.30.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
