--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "saslsjpt",
-    "database": "wd-todo-dev",
+    "database": "todo_db",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
